# SLAE

./: README.md
sem_1/src/: CMakeLists.txt
sem_1/src/my_project/dense/: densematrix.hpp
sem_1/src/my_project/matrix/: ThreeDiagonalMatrix.cpp  ThreeDiagonalMatrix.hpp
sem_1/src/my_project/solvers/: TridiagonalSolver.cpp  TridiagonalSolver.hpp
sem_1/src/my_project/sparse/: CSR.hpp
sem_1/src/my_project/utility/: overloads.hpp
sem_1/src/project/Chebyshev/: Chebyshev.h
sem_1/src/project/Generators/: MatrixGenerator.hpp
sem_1/src/project/LeastSquares/: LeastSquares.hpp
sem_1/src/project/decompositions/: Householder.cpp  QR_decomposition_Givens.hpp  QR_decomposition_Gram_Schmidt.hpp  QR_decomposition_Householder.hpp
sem_1/src/project/dense/: densematrix.hpp
sem_1/src/project/matrix/: ThreeDiagonalMatrix.hpp
sem_1/src/project/solvers/: ConjugateGradients.hpp  FastSimpleIteration.hpp  GMRES.hpp  GaussSeidel.hpp  Jacobi.hpp  ReverseGauss.hpp  SimpleIteration.hpp  SteepestGradientDescent.hpp  TridiagonalSolver.cpp  TridiagonalSolver.hpp
sem_1/src/project/sparse/: CSR.hpp
sem_1/src/project/utility/: Norm.hpp  Triplet.hpp  operations.cpp  operations.hpp  overloads.hpp
sem_1/tests/: test_CSR_matrix.cpp  test_DenseMatrix.cpp  test_GaussSeidel_solver.cpp  test_Givens.cpp  test_Jacobi_solver.cpp  test_QR_decomp_Gram_Schmidt.cpp  test_SGD.cpp  test_SimpleIteration_solver.cpp  test_exception.cpp  test_triagonal_solver.cpp
task_1/: Givens.hpp  Householder.cpp
